attempting to fix mobile canvas overflow

--- a/styles/scss/homePage/_carousel.module.scss
+++ b/styles/scss/homePage/_carousel.module.scss
@@ -21,14 +21,15 @@
     // position: fixed;
     // top: 0;
     // left: 0;
-    @media screen and (max-width:$xs){
+    @media screen and (max-width:$s){
         height: 100vh;
         width: 100vw;
-        position:fixed;
+        position: fixed;
         padding: 0;
         margin: 0;
-        top: 0;
+        top: 0%;
         left: 0;
+        background-color: greenyellow;
     }
 }
 .titles{
